Se agrego la posibilidad de agregar nuevo registro
Dentro de la nueva caracteristica se
refactorizo el codigo

Resolve: T#0004.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,24 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
 }
 
-.mainTitle {
-    text-align: center;
-    margin-bottom: 2em;
+.cntTitle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em 0 1em 0;
 }
 
 .cntMain {
     display: flex;
     justify-content: center;
+    background-color: #eff1f1;
+    padding: 3em 0 3em 0;
 }
 
 .mainTable {
@@ -24,11 +33,11 @@ body {
 }
 
 .thDescripcion {
-    width: 500px;
+    width: 600px;
 }
 
 .mainTable--td {
-    height: 1.5em;
+    height: 1.7em;
     text-align: center;
 }
 
@@ -38,4 +47,43 @@ body {
 
 .hoy {
     background-color: #cee2a4;
+}
+
+.cntForm {
+    background-color: #eee7de;
+    padding: 3em 0 3em 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.titleForm {
+    margin-bottom: 1em ;
+}
+
+.labelForm {
+    width: 250px;
+    display: inline-block;
+}
+
+.fieldForm {
+    padding: 1em;
+    margin-bottom: 1em;
+    border-radius: 0.2em;
+    border: 1px solid #333333;
+}
+
+.btnForm {
+    width: 61em;
+    padding: 1em;
+    margin-top: 1em;
+}
+
+.fieldClient {
+    width: 20em;
+}
+
+.fieldDescription {
+    width: 40em;
 }
